--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^7.14.6",
+    "firestore": "^1.1.6",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
